# agent-control-plane

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260411_0001_initial.py
docs/: ARCHITECTURE.md  CASE_STUDY.md  LINKEDIN_POST.md  LINKEDIN_POST_FINAL_EN.md  README_SHORT_PL.md  RELIABILITY_NOTES.md  RUNBOOK.md
src/agent_control_plane/: __init__.py  auth.py  catalog.py  db.py  main.py  metrics.py  models.py  orm.py  repository.py  repository_seed.py  seed_data.py  services.py  settings.py  worker.py
src/agent_control_plane/static/: app.js  index.html  styles.css
tests/: test_api.py
